--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
-agp = "8.3.0-alpha14"
+agp = "8.2.0"
 gapicGoogleCloudAiGenerativelanguageV1beta3Java = "0.0.0-SNAPSHOT"
-grpcOkhttp = "1.59.0"
-kotlin = "1.9.0"
+grpcOkhttp = "1.60.0"
+kotlin = "1.9.21"
 coreKtx = "1.12.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -11,7 +11,7 @@ lifecycleRuntimeKtx = "2.6.2"
 activityCompose = "1.8.1"
 composeBom = "2023.10.01"
 navigationCompose = "2.7.5"
-roomRuntime = "2.6.0"
+roomRuntime = "2.6.1"
 lifecycleRuntimeCompose = "2.6.2"
 
 [libraries]
